[Bug] Fix visibility of theme-specific logos (#1559)

--- a/vizro-core/examples/scratch_dev/assets/css/custom.css
+++ b/vizro-core/examples/scratch_dev/assets/css/custom.css
@@ -1,1 +1,4 @@
 /* Custom CSS  */
+#logo-dark, #logo-light {
+    height: 40px;
+}
